# update_check_app

./: .env  .gitignore  Dockerfile  app.py  app_checker.py  docker-compose.yml  help.md  main.py  pyproject.toml  readme.md  readme.txt  requirements.txt
.env/: Dockerfile  __ini__.py  docker-compose.yml
app/: app.py  celery_beat.py  celery_config.py  celery_worker.py  config.py  database.py  docker-compose.yml  email_sender.py  email_utils.py  main.py  model.py  models.py  pypi_updates_checker.py  requirements.txt  routes.py  task.py  tasks.py
celery/: Dockerfile  Dockerfile_celery  celery.py  celery_tasks.py  celery_worker.py  celerybeat-schedule  config.py  main.py  requirements.txt  tasks.py  tasks1.py
docker/api/: Dockerfile
docker/celery/: Dockerfile
fastapi/: config.py  database.py  email_utils.py  main.py  models.py
fastapi1/: Dockerfile  config.py  docker-compose.yml
front/: index.html  login.html  signup.html
