[tool.poetry]
name = "app-project"
version = "0.1.0"
description = ""
authors = ["Maria <maria.parfenchyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = ".venv"