[tool.poetry]
name = "app-project"
version = "0.1.0"
description = ""
authors = ["Maria <maria.parfenchyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pymongo = "^4.11.1"
motor = "^3.7.0"
aiohttp = "^3.11.13"
celery = "^5.4.0"
redis = "^5.2.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = ".venv"